--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/styled-engine-sc": "^6.4.6",
+    "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.16"
   }
 }
